# dnspropagation

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  check.yaml  custom-list.yaml  pyproject.toml
.github/workflows/: publish-dockerhub.yml  publish-pypi.yml  simple-python.yml  test-build-pip-package.yml  tests.yml
src/: cli.py  custom-list.yaml  dnspropagation.py
src/dnspropagation/: cli.py  core.py  exitcodes.py
src/templates/: report.html
tests/: Dockerfile  Dockerfile-test-pip-package  conftest.py  functional.py
