[project]
name = "dnspropagation"
version = "0.0.7"
authors = [
  { name="Simon Berka", email="berka@berkasimon.com" },
]
description = "DNS propagation checker"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/berkas1/dnspropagation"
"Bug Tracker" = "https://github.com/berkas1/dnspropagation/issues"


[project.scripts]
dnspropagation = "dnspropagation.cli:main"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dnspropagation" = ["templates/*.html"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
